创建 article.proto 文件，并生成相关的文件，通过 ent 生成实体
